upgrade to JDK21 JEP 442